improved implementations of overwriteAllowed, 10 failing